# django-controlled-vocabulary

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
controlled_vocabulary/: __init__.py  admin.py  apps.py  defaults.py  models.py  settings.py  tests.py  translation.py  urls.py  utils.py  views.py
controlled_vocabulary/management/commands/: vocab.py
controlled_vocabulary/migrations/: 0001_initial.py  0002_auto_20191201_0009.py  0002_auto_20191207_0103.py  0003_auto_20191202_0028.py  0003_auto_20191211_0113.py  0004_controlledvocabulary_concept.py  0004_remove_controlledvocabulary_test.py
controlled_vocabulary/static/admin/js/: controlled_term_widget.js
controlled_vocabulary/templates/controlled_vocabulary/: controlled_term.html
controlled_vocabulary/vocabularies/: base.py  base_csv.py  base_http.py  base_list.py  dcmitype.py  fast_forms.py  fast_topic.py  iso15924.py  iso639_2.py  mime.py  schema.py  viaf.py  wikidata.py
tests/: test_django_controlled_vocabulary2.py
tests/django2/tests/: urls.py  wsgi.py
tests/django3/tests/: asgi.py  settings.py  urls.py  wsgi.py
tests/tests/: settings.py  urls.py
