[tool.poetry]
name = "django-controlled-vocabulary"
version = "0.1.6"
description = "Link your data to authority lists or your own controlled lists"
authors = ["geoffroy-noel-ddh <geoffroy.noel@kcl.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kingsdigitallab/django-controlled-vocabulary"
repository = "https://github.com/kingsdigitallab/django-controlled-vocabulary"
keywords = ["controlled-vocabulary", "linked-data", "vocabulary", "metadata"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Operating System :: OS Independent",
]
include = [
  "LICENSE",
]
packages = [
  {include = "controlled_vocabulary"}
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
