[tool.poetry]
name = "django-controlled-vocabulary"
version = "0.12"
description = "Link your data to authority lists or your own controlled lists"
authors = ["geoffroy-noel-ddh <geoffroy.noel@kcl.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kingsdigitallab/django-controlled-vocabulary"
repository = "https://github.com/kingsdigitallab/django-controlled-vocabulary"
keywords = ["controlled-vocabulary", "linked-data", "vocabulary", "metadata"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Operating System :: OS Independent",
]
include = [
  "LICENSE",
]
packages = [
  {include = "controlled_vocabulary"}
]

[tool.poetry.dependencies]
python = "^3.5"
django = ">=2.2,<3.3"
urllib3 = "^1.25"
# only included because they are referenced by .extras
tox = { version = "^3.0", optional = true }
coverage = { version = "^4.5", optional = true}

[tool.poetry.dev-dependencies]
tox = "^3.0"
coverage = "^4.5"

[tool.poetry.extras]
# .extras used used by tox
# just references to [tool.poetry.dependencies]
# same as [tool.poetry.dev-dependencies]
toml_tox = ['tox', 'coverage']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
